# omega_h

./: CMakeLists.txt  Doxyfile  README.md  romulus-config.sh
.github/workflows/: cmake-cuda.yml  cmake.yml  doxygen-gh-pages.yml  globus-test.yml  installation.yml  pr_comment_trigger_self_hosted.yml
.github/workflows/frontier/: install.sh  run.sh
.github/workflows/perlmutter/: install.sh  run.sh
cdash/: Project.xml  nightly.cmake  nightly.sh
cmake/: FindADIOS2.cmake  FindGmsh.cmake  FindSimModSuite.cmake  bob.cmake
doc/: Omega_h.dox
example/external_installation/: CMakeLists.txt  test_export.cpp  test_expot.cpp
meshes/: plate_6elem_xgc-gold.ele  plate_6elem_xgc-gold.node  square4el.msh
meshes/ltx_graded_gauss.osh/: 0.osh
meshes/plate_6elem_2compTag.osh/: 0.osh
src/: 2d_conserve_test.cpp  3d_conserve_test.cpp  CMakeLists.txt  Omega_h_adapt.cpp  Omega_h_adios2.cpp  Omega_h_adios2.hpp  Omega_h_amr.cpp  Omega_h_array.cpp  Omega_h_array.hpp  Omega_h_array_default.hpp  Omega_h_array_kokkos.hpp  Omega_h_atomics.hpp  Omega_h_bcast.cpp  Omega_h_check_collapse.cpp  Omega_h_coarsen_flip.cpp  Omega_h_coarsen_overshoot.cpp  Omega_h_coarsen_qualities.cpp  Omega_h_collapse_rail.cpp  Omega_h_comm.cpp  Omega_h_compare.cpp  Omega_h_dbg.hpp  Omega_h_dist.cpp  Omega_h_dolfin.cpp  Omega_h_egads.cpp  Omega_h_exodus.cpp  Omega_h_fail.hpp  Omega_h_fence.cpp  Omega_h_few.hpp  Omega_h_file.cpp  Omega_h_file.hpp  Omega_h_fix.cpp  Omega_h_for.hpp  Omega_h_ghost.cpp  Omega_h_gmsh.cpp  Omega_h_graph.hpp  Omega_h_inertia.hpp  Omega_h_kokkos.hpp  Omega_h_library.cpp  Omega_h_macros.h  Omega_h_malloc.cpp  (+76 more)
